fix(badge): don't let it shrink in width, when container is too small

--- a/src/components/badge/badge.scss
+++ b/src/components/badge/badge.scss
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 
     font-size: functions.pxToRem(11);
 
